[package]
name = "subscription"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "subscription"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
spl-token-2022 = "5.0.2"
spl-transfer-hook-interface = "0.8.3"
spl-tlv-account-resolution = "0.8.3"
spl-type-length-value = "0.5.0"

