[package]
name = "subscription"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "subscription"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
spl-token-2022 = { version = "4.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.7.0"
spl-tlv-account-resolution = "0.7.0"
spl-type-length-value = "0.4.0"

