[package]
name = "subscription"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "subscription"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-token-2022 = { version = "1.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.6"
spl-tlv-account-resolution = "0.6"
spl-type-length-value = "0.4.0"

